<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="89dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stretchColumns="1">
                <TableRow android:padding="10dp">

                    <TextView
                        android:layout_width="@dimen/rec_title_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/rec_title_size"
                        android:text="@string/record_wound_exudation" />
                </TableRow>
                <TableRow android:padding="10dp">
                    <RadioGroup
                        android:id="@+id/group_wound_leachate_volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_little"
                            android:tag="1" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_middle"
                            android:tag="2" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_large"
                            android:tag="3" />

                    </RadioGroup>
                </TableRow>

                <TableRow android:padding="10dp" android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="@dimen/rec_title_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/rec_title_size"
                        android:text="@string/record_wound_color" />
                </TableRow>
                <TableRow android:padding="10dp">
                    <RadioGroup
                        android:id="@+id/group_wound_leachate_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_limpidity"
                            android:tag="1" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_blood"
                            android:tag="2" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_yellow"
                            android:tag="3" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_green"
                            android:tag="4" />

                        <RadioButton
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:tag="5"
                            android:text="@string/record_wound_brownness"
                            android:textSize="@dimen/rec_title_size" />

                    </RadioGroup>
                </TableRow>

                <TableRow android:padding="10dp" android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="@dimen/rec_title_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/rec_title_size"
                        android:text="@string/record_wound_smell" />
                </TableRow>
                <TableRow android:padding="10dp">
                    <RadioGroup
                        android:id="@+id/group_wound_leachate_smell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_tasteless"
                            android:tag="1" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_smelly"
                            android:tag="2" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:textSize="@dimen/rec_title_size"
                            android:text="@string/record_wound_frowziness"
                            android:tag="3" />

                    </RadioGroup>
                </TableRow>

            </TableLayout>
<!--
            <Button
                android:id="@+id/btn_step_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/rec_title_size"
                android:background="@null"
                android:text="下一步" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
