<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2012, The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/deep_camera_view"
            android:layout_width="640px"
            android:layout_height="480px"
            android:layout_weight="0.99" />


        <com.dnion.app.android.injuriesapp.camera_tool.DeepModelDisplayView
            android:id="@+id/deep_model_view"
            android:layout_width="640px"
            android:layout_height="480px"
            android:layout_weight="0.99" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/open_button"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera_open" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/camera_stop" />

        <Switch
            android:id="@+id/image_swith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="RGB"
            android:textOn="DEPTH" />

        <Button
            android:id="@+id/model_button"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera_model" />

        <!--<SeekBar-->
            <!--android:id="@+id/dephSeekBar"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <Button
            android:id="@+id/reset_button"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/camera_reset_pos" />

        <Button
            android:id="@+id/measure"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/measure_area" />
        <Button
            android:id="@+id/camera_shot"
            android:layout_width="@dimen/camera_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/camera_shot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/area_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="area_view" />

            <TextView
                android:id="@+id/volume_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="volume_view" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>